--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
       <a href="https://t.me/PTD_KING_TC" target="_blank" class="social-icon telegram-group"><i class="fab fa-telegram"></i> Telegram Group</a>
       <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i> Instagram</a>
       <a href="https://tiktok.com/@_god___ptd___king___xvip" target="_blank" class="social-icon tiktok"><i class="fab fa-tiktok"></i> TikTok</a>
-      <a href="https://www.facebook.com/yourprofile" target="_blank" class="social-icon facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
-      <a href="https://x.com/yourprofile" target="_blank" class="social-icon twitter"><i class="fab fa-twitter"></i> X (Twitter)</a>
-      <a href="https://www.rednote.com/yourprofile" target="_blank" class="social-icon rednote"><i class="fab fa-rss"></i> RedNote</a>
-      <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="social-icon linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="" target="_blank" class="social-icon facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
+      <a href="" target="_blank" class="social-icon twitter"><i class="fab fa-twitter"></i> X (Twitter)</a>
+      <a href="" target="_blank" class="social-icon rednote"><i class="fab fa-rss"></i> RedNote</a>
+      <a href="" target="_blank" class="social-icon linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
     </section>
 
     <!-- Call to Action -->
